--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-2 order-1 mb-4 mb-lg-0">
-                    <img src="C:\Users\echok\Downloads\web\images\drill.png" alt="ГНБ оборудование" class="img-fluid" loading="lazy">
+                    <img src="images\drill.png" alt="ГНБ оборудование" class="img-fluid" loading="lazy">
                 </div>
             </div>
         </div>
